Fixed collapse color.

--- a/assets/css/parallax.css
+++ b/assets/css/parallax.css
@@ -29,6 +29,7 @@ body, html {
     margin-bottom: 50px;
     color: black !important;
     border-bottom: black 2px solid;
+    background-color: white;
 
   }
 
@@ -58,7 +59,7 @@ body, html {
 
   #whatwedo{
 
-    height: fit-content;
+    height: 500px;
     background-color: black;
     font-size: 1rem;
     color: white;
@@ -72,7 +73,7 @@ body, html {
 
   #contact{
 
-    height: fit-content;
+    height: 500px;
     background-color: black;
     font-size: 1rem;
     color: white;
@@ -82,3 +83,6 @@ body, html {
 
 
   }
+
+
+            
